Server communication works!!!11eleven!! We can now get tracks from xml.